<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/invite_last"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:padding="15dp"
        android:text="@string/previous"
        android:textColor="#4169E1"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/invite_icon"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="124dp"
        android:src="@drawable/invite_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.17"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.27" />

    <TextView
        android:id="@+id/invite_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/invite_text"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="@+id/invite_icon"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="@+id/invite_icon"
        app:layout_constraintTop_toBottomOf="@+id/invite_icon" />

    <ImageView
        android:id="@+id/invite_input_bg"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="36dp"
        android:scaleType="centerCrop"
        android:src="@drawable/input_box"
        app:layout_constraintEnd_toEndOf="@+id/invite_icon"
        app:layout_constraintHeight_percent="0.0876"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="@+id/invite_icon"
        app:layout_constraintTop_toBottomOf="@+id/invite_text"
        app:layout_constraintWidth_percent="0.55" />

    <EditText
        android:id="@+id/invite_key_edit"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@null"
        android:gravity="center"
        android:hint="@string/invite_hint"
        android:textColor="#BCBCBC"
        android:textSize="18sp"
        android:singleLine="true"
        app:layout_constraintBottom_toBottomOf="@+id/invite_input_bg"
        app:layout_constraintEnd_toEndOf="@+id/invite_input_bg"
        app:layout_constraintHeight_percent="0.0567"
        app:layout_constraintStart_toStartOf="@+id/invite_input_bg"
        app:layout_constraintTop_toTopOf="@+id/invite_input_bg"
        app:layout_constraintWidth_percent="0.34" />

    <TextView
        android:id="@+id/invite_skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="#4169E1"
        android:padding="15dp"
        android:text="@string/skip"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/invite_input_bg" />

    <ImageView
        android:id="@+id/invite_next"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="64dp"
        android:scaleType="fitCenter"
        android:src="@drawable/next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.125"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/invite_skip"
        app:layout_constraintWidth_percent="0.22" />


</androidx.constraintlayout.widget.ConstraintLayout>